<resources>
    <string name="app_name">Anti theft Aplication</string>
    <string name="logIn">login</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up</string>
    <string name="password">Password</string>
    <string name="anti_theft_application">Anti -Theft Application</string>
    <string name="anti_theft_detection">Anti-Theft Detection</string>
    <string name="duplicate_contact_remover">Duplicate Contact Remover</string>
    <string name="already_have_account_login">Already have Account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password_register">Password</string>
    <string name="register">Register</string>
    <string name="register_button">Register</string>
    <string name="change_password">Change</string>
    <string name="confirm_password_forget">Confirm Password</string>
    <string name="new_password_forget">New Password</string>
    <string name="forget_password_login">Forget Password?</string>
    <string name="contact_backup">Contact Backup</string>
    <string name="contact_restore">Contact Restore</string>
    <string name="duplicate_contact_remover1">Duplicate Contact Remover</string>
    <string name="title_activity_ata_main_page">ATA_main_page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="alternate_number">Alternate number</string>
    <string name="title_activity_contact_textview">contact_textview</string>
    <string name="success_message">Successfully registered</string>
    <string name="mem_1">Deepanshu Chaudhary (20BCE10531)</string>
    <string name="mem_2">Saksham Gupta (20BCE10288)</string>
    <string name="mem_3">Anush Jain (20BCE10335)</string>
    <string name="mem_4">Ashmit Srivastava (20BCE10346)</string>
    <string name="mem_5">Prateek Kumar Pandey (20BCE10330)</string>
    <string name="mem_6">Richard Joseph (20BCE10220)</string>
    <string name="mem_7">Naman Awasthi (20BCE10701)</string>
    <string name="mem_8">Shivansh Mishra (20BCE10574)</string>
    <string name="group_1">Group 1:</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="reset">RESET</string>
    <string name="new_pin">New Pin</string>
    <string name="forget_old_password">FORGET OLD PASSWORD?</string>
    <string name="todo">TODO</string>
    <string name="send_pin">SEND PIN</string>

</resources>
